update styles.css to apply styling to jumbotron, create a sidebar on page to float left, add padding to main div to line up with text in sidebar. update scripts.js to include two sections for business logic and user interface logic. update user interface logic to pull the value of the userInput into the system and then display in a list.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,20 @@
+.jumbotron {
+  text-align: center;
+  margin: 2%;
+  padding: 2%;
+}
+
+.side-bar {
+  float: left;
+  width: 200px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.main {
+  padding-top: 1px;
+}
+
 .results {
-  display: hide;
+  display: none;
 }
